# OpenClassrooms_Project_12

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
flake8-report/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_database_py.html  z_145eef247bfb46b6_seed_py.html  z_532385f02888fdd3___init___py.html  z_532385f02888fdd3_base_py.html  z_532385f02888fdd3_client_py.html  z_532385f02888fdd3_contract_py.html  z_532385f02888fdd3_event_py.html  z_532385f02888fdd3_role_py.html  z_532385f02888fdd3_user_py.html  z_b08a1d834a573f9f___init___py.html  z_b08a1d834a573f9f_client_controller_py.html  z_b08a1d834a573f9f_collaborator_controller_py.html  z_b08a1d834a573f9f_contract_controller_py.html  z_b08a1d834a573f9f_event_controller_py.html  z_b08a1d834a573f9f_main_controller_py.html
src/: database.py
src/cli/: client_cli.py  collaborator_cli.py  contract_cli.py  event_cli.py  main.py
src/controllers/: client_controller.py  collaborator_controller.py  contract_controller.py  event_controller.py  main_controller.py
src/models/: client.py  contract.py  event.py  role.py  user.py
src/views/: client_view.py  contract_view.py  contract_views.py  event_view.py  main_view.py  main_views.py
tests/integration_tests/: test_client_controller.py  test_contract_controller.py  test_controllers.py  test_event_controller.py  test_main_controller.py  test_user_controller.py
tests/unit_tests/: test_client_controller.py  test_contract_controller.py  test_controllers.py  test_event_controller.py  (+2 more)
(+15 files in other folders)
