[project]
name = "openclassrooms-project-12"
version = "0.1.0"
description = ""
authors = [
    {name = "NM",email = "nicolas.marie.nm@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.48,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
