[project]
name = "OpenClassrooms_Project_12"
version = "0.1.0"
description = ""
authors = [
    {name = "NM",email = "nicolas.marie.nm@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-html (>=0.4.3,<0.5.0)",
    "click (>=8.3.3,<9.0.0)",
    "rich (>=15.0.0,<16.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
